# eval-HOAS-names-benchmark

eval-cxx/: .clang-tidy  CMakeLists.txt  code-style.md  main.cxx  prelude.hxx
eval-hsk/: CHANGELOG.md  README.md  eval-hsk.cabal
eval-hsk/src/: EvalHOAS.hs  Main.hs
eval-java/: build.gradle.kts  settings.gradle.kts
eval-java/gradle/wrapper/: gradle-wrapper.properties
eval-java/src/main/java/org/example/: List.java  Main.java  Pair.java
eval-java/src/test/java/org/example/: TestChurchNumber.java
eval-mbt/src/: main.mbt
eval-rs/: Cargo.toml
eval-rs/src/: main.rs
eval-ts/: eslint.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
eval-ts/src/: eval.test.ts  eval.ts  index.ts
eval-ts/src/__snapshots__/: eval.test.ts.snap
